# roam

./: .gitignore  example.py  roam.code-workspace
client/: README.md  pyproject.toml
client/src/: __init__.py
client/src/remote_env/: __init__.py  env.py
client/src/roam_client/: __init__.py
controller/: .dockerignore  Dockerfile  deploy.sh  k3d-config.yaml  pyproject.toml
controller/app/: main.py
controller/app/models/: __init__.py
controller/app/services/: __init__.py  redis.py  streaming.py  tasks.py
controller/k8s/: README.md  deployment-dev.yaml  deployment.yaml  rbac.yaml  service.yaml
deploy/: README.md
deploy/k8s/: deployment-dev.yaml  ingress.yaml  namespace.yaml  rbac.yaml  redis.yaml  service.yaml  workers.yaml
deploy/scripts/: deploy-all.sh  deploy-with-cluster.sh
e2e/: conftest.py  pyproject.toml  test_integration.py
e2e/tests/: test_remote_execution.py
playground/: example.py  pyproject.toml
server/: pyproject.toml
worker/: README.md  celery_worker.py  pyproject.toml  roam_worker.py
