[project]
name = "roam-controller"
version = "0.1.0"
description = "Controller for Run On Another Machine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-cli>=0.0.13",
    "fastapi[standard]>=0.117.1",
    "kubernetes>=34.1.0",
    "pydantic>=2.11.9",
    "uvicorn>=0.36.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
]

[tool.uv]
dev-dependencies = ["ruff>=0.13.1"]
